tests/fail/fail_molda_unknown_field.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    Pessoa pessoa = Pessoa::{nomi: "jose", idadi: 60, peso: 80};
    mostra(pessoa.nomi);
}
